syntax = "proto3";

package ibc.applications.interchain_accounts.genesis.v2;

option go_package = "github.com/cosmos/ibc-go/v5/modules/apps/27-interchain-accounts/genesis/types/v2";

import "gogoproto/gogo.proto";
import "ibc/applications/interchain_accounts/genesis/v1/genesis.proto";
import "ibc/applications/interchain_accounts/controller/v1/controller.proto";

// GenesisState defines the interchain accounts genesis state
message GenesisState {
  ControllerGenesisState controller_genesis_state = 1
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"controller_genesis_state\""];
  ibc.applications.interchain_accounts.genesis.v1.HostGenesisState host_genesis_state = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"host_genesis_state\""];
}

// ControllerGenesisState defines the interchain accounts controller genesis state
message ControllerGenesisState {
  repeated ibc.applications.interchain_accounts.genesis.v1.ActiveChannel active_channels = 1
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"active_channels\""];
  repeated ibc.applications.interchain_accounts.genesis.v1.RegisteredInterchainAccount interchain_accounts = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"interchain_accounts\""];
  repeated string                                           ports              = 3;
  ibc.applications.interchain_accounts.controller.v1.Params params             = 4 [(gogoproto.nullable) = false];
  repeated MiddlewareEnabled                                middleware_enabled = 5
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"middleware_enabled\""];
}

// MiddlewareEnabled defines an interchain accounts channel which is middleware enabled
message MiddlewareEnabled {
  string port_id    = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  string channel_id = 2 [(gogoproto.moretags) = "yaml:\"channel_id\""];
}
